Click link with highest number

--- a/SampleTable.html
+++ b/SampleTable.html
@@ -14,19 +14,19 @@
   <tr>
     <td>Jill</td>
     <td>Smith</td>
-    <td>50</td>
+    <td><a href="">50</a></td>
     <td><input type="radio" name="age" value="Jill"><br></td>
   </tr>
   <tr>
     <td>Eve</td>
     <td>Jackson</td>
-    <td>94</td>
+    <td><a href="">94</a></td>
     <td><input type="radio" name="age" value="Eve"><br></td>
   </tr>
   <tr>
     <td>John</td>
     <td>Doe</td>
-    <td>80</td>
+    <td> <a href="">80</a></td>
     <td><input type="radio" name="age" value="John"><br></td>
   </tr>
 </table>
